
* Extcap dialog remembers password items during runtime therefore it is possible to run extcap multiple times in row. Passwords are never stored to disk.

* It is possible to set extcap passwords on cli for tshark and other cli tools.

* Extcap configuration dialog now supports and remembers empty strings. There are new buttons to reset a value back to default value.

=== Removed Features and Support

* CMake: The options starting with DISABLE_something were renamed ENABLE_something for consistency.
  For example DISABLE_WERROR=On became ENABLE_WERROR=Off. The defaults are unchanged.

// === Removed Dissectors

=== New File Format Decoding Support

[commaize]
--
--

=== New Protocol Support

// Add one protocol per line between the -- delimiters in the format
// “Full protocol name (Abbreviation)”
// git log --oneline --diff-filter=A --stat v3.7.0rc0.. epan/dissectors plugins
[commaize]
--
Host IP Configuration Protocol (HICP)
Secure Host IP Configuration Protocol (SHICP)
Mesh Connex (MCX)
FiveCo's Legacy Register Access Protocol (5co-legacy)
--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

// There is no new or updated capture file support in this release.
// Add one file type per line between the -- delimiters.
[commaize]
--
--

// === New and Updated Capture Interfaces support

//_Non-empty section placeholder._

=== Major API Changes

* proto.h: The field display types "STR_ASCII" and "STR_UNICODE" were removed. Use "BASE_NONE" instead.

== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages.
You can usually install or upgrade Wireshark using the package management system specific to that platform.
A list of third-party packages can be found on the
https://www.wireshark.org/download.html[download page]