@@ -100,6 +100,9 @@
     </widget>
    </item>
    <item>
+    <layout class="QHBoxLayout" name="textSearchLayout"/>
+   </item>
+   <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
