@@ -122,6 +122,9 @@
     </widget>
    </item>
    <item>
+     <layout class="QHBoxLayout" name="textSearchLayout"/>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0,0,0,0,0,0,0,1,0,0">
      <item>
       <widget class="QToolButton" name="playButton">
