@@ -80,6 +80,8 @@ They previously shipped with Npcap 1.55.
 
 * Extcap configuration dialog now supports and remembers empty strings. There are new buttons to reset a value back to default value.
 
+* Many dialogs allows to search text in shown values. Found text is highlighted.
+
 === Removed Features and Support
 
 * CMake: The options starting with DISABLE_something were renamed ENABLE_something for consistency.
